MB-28551: Ack correct amount when consuming a DCP deletion

Simple change to the code which was using the mutation header size
when calculating a delete.

Updated ep_testsuite_dcp to check the value is as expected.

Change-Id: I1d66a5b743bbb97d86520b28e27dd2a5f670e173
Reviewed-on: http://review.couchbase.org/90603
Reviewed-by: Daniel Owen <owend@couchbase.com>
Reviewed-by: Dave Rigby <daver@couchbase.com>
Tested-by: Build Bot <build@couchbase.com>
Reviewed-by: Tim Bradgate <tim.bradgate@couchbase.com>